<resources>
    <string name="app_name" translatable="false">MockLinkedIn</string>
    <string name="profile_button">Profile</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_view">Views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Your message</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="ic_menu_close_clear_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="profile">Profile</string>
    <string name="newpost">New Post</string>
    <string name="back">Back</string>
    <string name="enter_your_post_content">Enter your post content</string>
    <string name="post">Post</string>
    <!--<string name="hello_blank_fragment1" translatable="false">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2" translatable="false">Hello blank fragment 2</string>-->
    <string name="feed">Feed</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="menu_save">Save</string>
    <string name="user_avatar">User Avatar</string>
    <string name="change_avatar">Change Avatar</string>

    <!--<string name="last_name">Last Name</string>-->
    <string name="user_name_string">Name</string>
    <string name="user_name">Name</string>

    <string name="login_string">Login</string>
    <string name="login">Login</string>

    <string name="registration_date_string">Registration Date</string>
    <string name="registration_date">Registration Date</string>

    <!--<string name="birth_date">Birth Date</string>-->

    <string name="save_changes">Save Changes</string>
    <!--<string name="lastNameString">Lastname</string>-->

    <!--<string name="birthDateString">Birth date</string>-->
    <string name="registration_suggestion">Don\'t you have an account? You can register here.</string>
    <string name="registration">Registration</string>
    <string name="loginTitle">Login</string>
    <string name="registration_title">Registration</string>

    <string name="loginHint">Login</string>
    <string name="password_hint">Password</string>

    <string name="enter_button">Enter</string>
    <!--<string name="name">Name</string>-->
    <!--<string name="lastName">Lastname</string>-->
    <string name="exist_user">User not found</string>
    <string name="empty_posts">Empty</string>
    <string name="show_new_posts">New posts</string>
    <string name="error_loading">Loading error</string>
    <string name="retry_loading">Retry</string>

    <string name="name_of_company">Name of company</string>
    <string name="position_at_company">Position at company</string>
    <string name="date_start_of_work">Date start of work</string>
    <string name="date_end_of_work">Date end of work</string>
    <string name="job">Job:</string>
    <string name="standart_geolocation">0.0 0.0</string>
    <string name="new_job">Add</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="suggest_authorization">You want authorization?</string>

    <string name="companyLink">Link to site of company</string>
</resources>